@@ -149,6 +149,8 @@ STATEMENT_CREATE_TOPIC_VERSION_TABLE = \
       CONSTRAINT jam_f_topicv_wuser FOREIGN KEY (wiki_user_id) REFERENCES jam_wiki_user(wiki_user_id), \
       CONSTRAINT jam_f_topicv_pver FOREIGN KEY (previous_topic_version_id) REFERENCES jam_topic_version(topic_version_id) \
     )
+STATEMENT_CREATE_TOPIC_VERSION_TOPIC_INDEX = \
+    CREATE INDEX jam_i_topicv_topic on jam_topic_version (topic_id) 
 STATEMENT_CREATE_USERS_TABLE = \
     CREATE TABLE jam_users ( \
       username varchar(100) NOT NULL, \
@@ -282,6 +284,8 @@ STATEMENT_DROP_TOPIC_PAGE_NAME_LOWER_INDEX = \
     DROP INDEX jam_i_topic_pgnml
 STATEMENT_DROP_TOPIC_VERSION_TABLE = \
     DROP TABLE jam_topic_version
+STATEMENT_DROP_TOPIC_VERSION_TOPIC_INDEX = \
+    DROP INDEX jam_i_topicv_topic
 STATEMENT_DROP_USERS_TABLE = \
     DROP TABLE jam_users
 STATEMENT_DROP_VIRTUAL_WIKI_TABLE = \
